--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-component-boilerplate",
-  "version": "0.2.1",
-  "description": "a react component boilerplate",
+  "name": "beyond-slider",
+  "version": "1.0.0",
+  "description": "a react component for slider",
   "main": "lib/index.js",
   "style": "lib/index.css",
   "scripts": {
@@ -10,19 +10,21 @@
     "lint": "eslint ./src",
     "test": "karma start  --config karma.conf.js",
     "clear": "rimraf lib",
-    "build": "npm run clear && cross-env NODE_ENV=production babel src --out-dir lib && webpack --config webpack.style.config.js",
+    "build": "npm run clear && cross-env NODE_ENV=production babel src --out-dir lib --plugins transform-es2015-modules-commonjs  && webpack --config webpack.style.config.js",
     "clear:example": "rimraf dist",
     "build:example": "npm run clear:example && cross-env NODE_ENV=production webpack --config webpack.config.js"
   },
   "dependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "classnames": "^2.2.5",
+    "react": ">=0.14.0",
+    "react-dom": ">=0.14.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
     "babel-plugin-transform-es3-member-expression-literals": "^6.3.13",
     "babel-plugin-transform-es3-property-literals": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
@@ -30,12 +32,13 @@
     "babel-preset-react-hmre": "^1.1.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.0",
+    "es3ify-webpack-plugin": "0.0.1",
     "eslint": "^1.10.2",
     "eslint-plugin-react": "^3.11.3",
     "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^1.6.2",
+    "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.6.5",
     "json-server": "^0.8.4",
     "karma": "^0.13.15",
@@ -51,11 +54,12 @@
     "postcss-clearfix": "^0.2.0",
     "postcss-loader": "^0.8.1",
     "quick-local-ip": "^1.0.7",
+    "react-hot-loader": "^3.0.0-beta.6",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   },
   "repository": {
     "type": "git",
