--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,5 @@
 {
-  "presets": [[
-			"es2015",
-			{
-				"loose": true,
-				"modules": false
-			}
-		],
-		"react"],
+  "presets": ["react", "es2015"],
   "env": {
     "development": {
       "presets": ["react-hmre"]
