--- a/package.json
+++ b/package.json
@@ -1,59 +1,61 @@
 {
-  "name": "beyond-slider",
-  "version": "0.1.1",
-  "description": "a react component for slider",
-  "main": "lib/index.js",
-  "style": "lib/index.css",
+  "name": "ts-boilerplate2",
+  "version": "1.0.0",
+  "description": "a react boilerplate on typescript",
+  "main": "./src/main.js",
   "scripts": {
     "start": "node ./server.js",
-    "lint": "eslint ./src",
-    "clear": "rimraf lib",
-    "build": "npm run clear && cross-env NODE_ENV=production babel src --out-dir lib --plugins transform-es2015-modules-commonjs  && webpack --config webpack.style.config.js",
-    "clear:example": "rimraf dist",
-    "build:example": "npm run clear:example && cross-env NODE_ENV=production webpack --config webpack.config.js"
+    "mock": "cd ./mock && json-server --watch db.json --routes routes.json --port 9001",
+    "clean": "rimraf dist",
+    "deploy": "npm run clean && cross-env NODE_ENV=production webpack --config webpack.config.js"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "react": ">=0.14.0",
-    "react-dom": ">=0.14.0"
+    "@types/es6-shim": "^0.31.32",
+    "@types/react": "^0.14.50",
+    "@types/react-dom": "^0.14.19",
+    "@types/classnames": "^0.0.31",
+    "beyond-lib": "^1.0.2",
+    "beyond-remote": "^0.4.5",
+    "es6-shim": "^0.35.2",
+    "normalize.css": "^5.0.0",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",   
+     "jquery": "^1.11.0",
+     "classnames": "^2.2.3"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.1",
-    "babel-cli": "^6.4.0",
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.3.13",
-    "babel-plugin-transform-es3-property-literals": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-react-hmre": "^1.1.0",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.0",
-    "es3ify-webpack-plugin": "0.0.1",
-    "eslint": "^1.10.2",
-    "eslint-plugin-react": "^3.11.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.28.0",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.2",
-    "opn": "^3.0.3",
-    "postcss-clearfix": "^0.2.0",
-    "postcss-loader": "^0.8.1",
+    "autoprefixer": "^6.1.1",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.25.0",
+    "exports-loader": "^0.6.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.24.1",
+    "imports-loader": "^0.6.5",
+    "json-server": "^0.9.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "opn": "^4.0.2",
+    "postcss-filter-gradient": "^0.2.4",
+    "postcss-loader": "^1.1.1",
+    "react-hot-loader": "^3.0.0-beta.5",
     "rimraf": "^2.5.2",
-    "style-loader": "^0.13.0",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^1.2.2",
+    "typescript": "^2.0.10",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bestsuperdev/beyond-slider.git"
+    "url": "https://github.com/bestsuperdev/ts-boilerplate2.git"
   },
+  "author": "Peng mingze <mingzepeng@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bestsuperdev/beyond-slider/issues"
+    "url": "https://github.com/bestsuperdev/ts-boilerplate2/issues"
   },
-  "homepage": "https://github.com/bestsuperdev/beyond-slider.git"
+  "homepage": "https://github.com/bestsuperdev/ts-boilerplate2"
 }
